[package]
name = "fe3o4"
version = "0.3.0"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "A Registry System for Game Development."
documentation = "https://github.com/misaka10987/fe3o4"
homepage = "https://github.com/misaka10987/fe3o4"
repository = "https://github.com/misaka10987/fe3o4"
readme = "README.md"
keywords = ["fe3o4", "game", "registry"]
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
arrayvec = { version = "0.7.6", features = ["serde"] }
dashmap = "6.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.12.0"
thiserror = "2.0.12"

[target.'cfg(target_family="wasm")'.dependencies]
tsify-next = { version = "0.5.5", features = ["js"] }
wasm-bindgen = { version = "0.2.100" }
